--- a/templates/authentication/register.html
+++ b/templates/authentication/register.html
@@ -1,4 +1,4 @@
-{% extends 'layouts-demo/base-fullscreen.html' %}
+{% extends 'layouts/base-fullscreen.html' %}
 
 {% block title %} Register {% endblock title %}
 
