--- a/templates/includes/sidenav.html
+++ b/templates/includes/sidenav.html
@@ -23,7 +23,7 @@
         <hr class="my-3">
         <!-- Heading -->
         <h6 class="navbar-heading p-0 text-muted">
-          <span class="docs-normal">Resources</span>
+          <span class="docs-normal">Test</span>
         </h6>
         <!-- Navigation -->
         <ul class="navbar-nav mb-md-3">
@@ -32,7 +32,7 @@
                target="_blank" 
                href="https://appseed.us/admin-dashboards/django-dashboard-argon">
               <i class="ni ni-archive-2"></i>
-              <span class="nav-link-text">Product Page</span>
+              <span class="nav-link-text">Test</span>
             </a>
           </li>
         </ul>
