--- a/templates/authentication/includes/sidenav.html
+++ b/templates/authentication/includes/sidenav.html
@@ -2,7 +2,7 @@
   <div class="scrollbar-inner">
     <!-- Brand -->
     <div class="sidenav-header  align-items-center">
-      <a class="navbar-brand" href="/">
+      <a class="navbar-brand" href="/backoffice">
         <!--<img src="/static/assets/img/brand/blue.png" class="navbar-brand-img" alt="Argon Design - Jinja Template Logo.">-->
           <h1>Music Engine S.L.</h1>
       </a>
@@ -13,7 +13,7 @@
         <!-- Nav items -->
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link {% if 'index' in segment %} active {% endif %}" href="/">
+            <a class="nav-link {% if 'index' in segment %} active {% endif %}" href="/backoffice">
               <i class="ni ni-tv-2 text-primary"></i>
               <span class="nav-link-text">Home</span>
             </a>
