--- a/templates/backoffice/index.html
+++ b/templates/backoffice/index.html
@@ -1,4 +1,4 @@
-{% extends 'layouts/base.html' %}
+{% extends 'backoffice/layouts/base.html' %}
 
 {% block title %} Dashboard {% endblock title %}
 
@@ -31,7 +31,7 @@
       <div class="row">
           <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
       </div>
-      {% include "includes/footer.html" %}
+      {% include "backoffice/includes/footer.html" %}
     </div>
 
 {% endblock content %}
