--- a/templates/demo/index.html
+++ b/templates/demo/index.html
@@ -1,4 +1,4 @@
-{% extends 'layouts-demo/base.html' %}
+{% extends 'demo/layouts-demo/base.html' %}
 
 {% block title %} Dashboard {% endblock title %}
 
@@ -399,7 +399,7 @@
         </div>
       </div>
 
-      {% include "includes-demo/footer.html" %}
+      {% include "demo/includes-demo/footer.html" %}
 
     </div>
 
