--- a/templates/demo/tables.html
+++ b/templates/demo/tables.html
@@ -1,4 +1,4 @@
-{% extends 'layouts-demo/base.html' %}
+{% extends 'demo/layouts-demo/base.html' %}
 
 {% block title %} Tables {% endblock title %}
 
@@ -699,7 +699,7 @@
       </div>
     </div>
 
-    {% include "includes-demo/footer.html" %}
+    {% include "demo/includes-demo/footer.html" %}
 
   </div>
 
