--- a/templates/authentication/layouts/base.html
+++ b/templates/authentication/layouts/base.html
@@ -43,17 +43,17 @@
 
 <body class="">
 
-  {% include "includes/sidenav.html" %}
+  {% include "authentication/includes/sidenav.html" %}
 
   <div class="main-content" id="panel">
 
-    {% include "includes/navigation.html" %}
+    {% include "authentication/includes/navigation.html" %}
 
     {% block content %}{% endblock content %}
 
   </div>
 
-  {% include "includes/scripts.html" %}
+  {% include "authentication/includes/scripts.html" %}
 
   <!-- Specific JS goes HERE --> 
   {% block javascripts %}{% endblock javascripts %}
