--- a/templates/authentication/login.html
+++ b/templates/authentication/login.html
@@ -1,4 +1,4 @@
-{% extends 'layouts/base-fullscreen.html' %}
+{% extends 'authentication/layouts/base-fullscreen.html' %}
 
 {% block title %} Login {% endblock title %}
 
