--- a/templates/backoffice/page-403.html
+++ b/templates/backoffice/page-403.html
@@ -1,4 +1,4 @@
-{% extends 'layouts/base-fullscreen.html' %}
+{% extends 'backoffice/layouts/base-fullscreen.html' %}
 
 {% block title %} Error 403 {% endblock title %}
 
@@ -26,7 +26,7 @@
           </div>
           <div class="row mt-3">
             <div class="col-6">
-              <a href="/" class="text-light"><small>Home</small></a>
+              <a href="/backoffice" class="text-light"><small>Home</small></a>
             </div>          
             <div class="col-6 text-right">
               <a target="_blank" 
