--- a/templates/backoffice/page-500.html
+++ b/templates/backoffice/page-500.html
@@ -1,4 +1,4 @@
-{% extends 'layouts/base-fullscreen.html' %}
+{% extends 'backoffice/layouts/base-fullscreen.html' %}
 
 {% block title %} Error 404 {% endblock title %}
 
@@ -19,14 +19,14 @@
               </div>
 
               <div class="text-center mb-4">
-                Server error, please contact support - <a href="/">Home</a>.
+                Server error, please contact support - <a href="/backoffice">Home</a>.
               </div>
 
             </div>
           </div>
           <div class="row mt-3">
             <div class="col-6">
-              <a href="/" class="text-light"><small>Home</small></a>
+              <a href="/backoffice" class="text-light"><small>Home</small></a>
             </div>
             <div class="col-6 text-right">
               <a target="_blank" 
