--- a/templates/demo/icons.html
+++ b/templates/demo/icons.html
@@ -1,4 +1,4 @@
-{% extends 'layouts-demo/base.html' %}
+{% extends 'demo/layouts-demo/base.html' %}
 
 {% block title %} Icons {% endblock title %}
 
@@ -926,7 +926,7 @@
         </div>
       </div>
 
-      {% include "includes-demo/footer.html" %}
+      {% include "demo/includes-demo/footer.html" %}
 
     </div>
 
