--- a/templates/demo/map.html
+++ b/templates/demo/map.html
@@ -1,4 +1,4 @@
-{% extends 'layouts-demo/base.html' %}
+{% extends 'demo/layouts-demo/base.html' %}
 
 {% block title %} Maps {% endblock title %}
 
@@ -37,7 +37,7 @@
         </div>
       </div>
 
-      {% include "includes-demo/footer.html" %}
+      {% include "demo/includes-demo/footer.html" %}
       
     </div>
 
