--- a/templates/demo/profile.html
+++ b/templates/demo/profile.html
@@ -1,4 +1,4 @@
-{% extends 'layouts-demo/base.html' %}
+{% extends 'demo/layouts-demo/base.html' %}
 
 {% block title %} Profile {% endblock title %}
 
@@ -171,7 +171,7 @@
     </div>
   </div>
 
-  {% include "includes-demo/footer.html" %}
+  {% include "demo/includes-demo/footer.html" %}
 
 </div>
 
