--- a/templates/backoffice/includes/sidenav.html
+++ b/templates/backoffice/includes/sidenav.html
@@ -18,6 +18,12 @@
               <span class="nav-link-text">Home</span>
             </a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link {% if 'reservas' in segment %} active {% endif %}" href="/backoffice/reservas">
+              <i class="ni ni-notification-70 text-primary"></i>
+              <span class="nav-link-text">Reservas</span>
+            </a>
+          </li>
         </ul>
         <!-- Divider -->
         <hr class="my-3">
