--- a/templates/backoffice/layouts/base.html
+++ b/templates/backoffice/layouts/base.html
@@ -22,7 +22,7 @@
   <link rel="canonical" href="https://appseed.us/admin-dashboards/django-dashboard-argon">
   
   <title>
-    Django Argon Dashboard - {% block title %} Open-Source Admin Panel {% endblock %} | AppSeed
+    {% block title %}{% endblock %} | MusicEngine S.L. | UdL
   </title>
 
   <!-- Favicon - loaded as static -->
