--- a/templates/backoffice/reserva/reserva_list.html
+++ b/templates/backoffice/reserva/reserva_list.html
@@ -1,6 +1,6 @@
 {% extends 'backoffice/layouts/base.html' %}
 
-{% block title %} Dashboard {% endblock title %}
+{% block title %} Reservas {% endblock title %}
 
 <!-- Specific CSS goes HERE -->
 {% block stylesheets %}{% endblock stylesheets %}
@@ -13,11 +13,12 @@
             <div class="header-body">
                 <div class="row align-items-center py-4">
                     <div class="col-lg-6 col-7">
-                        <h6 class="h2 text-white d-inline-block mb-0">Home</h6>
+                        <h6 class="h2 text-white d-inline-block mb-0">Reservas</h6>
                         <nav aria-label="breadcrumb" class="d-none d-md-inline-block ml-md-4">
                             <ol class="breadcrumb breadcrumb-links breadcrumb-dark">
                                 <li class="breadcrumb-item"><a href="#"><i class="fas fa-home"></i></a></li>
-                                <li class="breadcrumb-item active" aria-current="page"><a href="#">Home</a></li>
+                                <li class="breadcrumb-item" aria-current="page"><a href="#">Home</a></li>
+                                <li class="breadcrumb-item active" aria-current="page"><a href="#">Reservas</a></li>
                             </ol>
                         </nav>
                     </div>
@@ -27,7 +28,7 @@
     </div>
 
     <!-- Page content -->
-    <div class="container-fluid mt--6">
+    <div class="container-fluid mt-4">
         <div class="row">
             <h1>Reservas</h1>
             <table class="table table-striped">
