--- a/templates/backoffice/includes/sidenav.html
+++ b/templates/backoffice/includes/sidenav.html
@@ -29,13 +29,28 @@
         <hr class="my-3">
         <!-- Heading -->
         <h6 class="navbar-heading p-0 text-muted">
+          <span class="docs-normal">Objectes</span>
+        </h6>
+        <!-- Navigation -->
+        <ul class="navbar-nav mb-md-3">
+          <li class="nav-item">
+            <a class="nav-link {% if 'tecnics' in segment %} active {% endif %}" href="/backoffice/tecnics">
+              <i class="ni ni-atom text-primary"></i>
+              <span class="nav-link-text">Tècnics</span>
+            </a>
+          </li>
+        </ul>
+        <!-- Divider -->
+        <hr class="my-3">
+        <!-- Heading -->
+        <h6 class="navbar-heading p-0 text-muted">
           <span class="docs-normal">Test</span>
         </h6>
         <!-- Navigation -->
         <ul class="navbar-nav mb-md-3">
           <li class="nav-item">
-            <a class="nav-link" 
-               target="_blank" 
+            <a class="nav-link"
+               target="_blank"
                href="https://appseed.us/admin-dashboards/django-dashboard-argon">
               <i class="ni ni-archive-2"></i>
               <span class="nav-link-text">Test</span>
