--- a/templates/backoffice/tecnics_especialistes.html
+++ b/templates/backoffice/tecnics_especialistes.html
@@ -13,12 +13,12 @@
             <div class="header-body">
                 <div class="row align-items-center py-4">
                     <div class="col-lg-6 col-7">
-                        <h6 class="h2 text-white d-inline-block mb-0">Reservas</h6>
+                        <h6 class="h2 text-white d-inline-block mb-0">Tècnics i Especialistes</h6>
                         <nav aria-label="breadcrumb" class="d-none d-md-inline-block ml-md-4">
                             <ol class="breadcrumb breadcrumb-links breadcrumb-dark">
                                 <li class="breadcrumb-item"><a href="#"><i class="fas fa-home"></i></a></li>
                                 <li class="breadcrumb-item" aria-current="page"><a href="#">Home</a></li>
-                                <li class="breadcrumb-item active" aria-current="page"><a href="#">Reservas</a></li>
+                                <li class="breadcrumb-item active" aria-current="page"><a href="#">Tècnics i Especialistes</a></li>
                             </ol>
                         </nav>
                     </div>
@@ -30,20 +30,20 @@
     <!-- Page content -->
     <div class="container-fluid mt-4">
         <div class="row">
-            <h1>Reservas</h1>
+            <h1>Tècnics i Especialistes</h1>
             <table class="table table-striped">
                 <tr>
                     <th>#</th>
-                    <th>DNI</th>
-                    <th>Nombre Cliente</th>
-                    <th>Fecha</th>
+                    <th>Nom</th>
+                    <th>Descripció</th>
+                    <th>Telèfon</th>
                 </tr>
-                {% for reserva in reserves %}
+                {% for t in tecnics %}
                     <tr>
-                        <td>{{ reserva.id }}</td>
-                        <td>{{ reserva.dni }}</td>
-                        <td>{{ reserva.nombre_cliente }}</td>
-                        <td>{{ reserva.fecha }}</td>
+                        <td>{{ t.id }}</td>
+                        <td>{{ t.nombre }}</td>
+                        <td>{{ t.descripcion }}</td>
+                        <td>{{ t.telefono }}</td>
                     </tr>
                 {% endfor %}
             </table>
@@ -56,7 +56,7 @@
 <!-- Specific JS goes HERE -->
 {% block javascripts %}
 
-    <script src="/static/assets/vendor/chart.js/dist/Chart.min.js"></script>
-    <script src="/static/assets/vendor/chart.js/dist/Chart.extension.js"></script>
+    <script src="/assets/vendor/chart.js/dist/Chart.min.js"></script>
+    <script src="/assets/vendor/chart.js/dist/Chart.extension.js"></script>
 
 {% endblock javascripts %}
