--- a/templates/backoffice/includes/sidenav.html
+++ b/templates/backoffice/includes/sidenav.html
@@ -34,7 +34,7 @@
         <!-- Navigation -->
         <ul class="navbar-nav mb-md-3">
           <li class="nav-item">
-            <a class="nav-link {% if 'tecnics' in segment %} active {% endif %}" href="/backoffice/tecnics">
+            <a class="nav-link {% if 'tecnics' in segment %} active {% endif %}" href="/backoffice/tecnicos">
               <i class="ni ni-atom text-primary"></i>
               <span class="nav-link-text">Tècnics</span>
             </a>
