--- a/templates/authentication/includes/navigation-fullscreen.html
+++ b/templates/authentication/includes/navigation-fullscreen.html
@@ -1,6 +1,6 @@
 <nav id="navbar-main" class="navbar navbar-horizontal navbar-transparent navbar-main navbar-expand-lg navbar-light">
   <div class="container">
-    <a class="navbar-brand" href="/backoffice">
+    <a class="navbar-brand" href="{% url 'home_back' %}">
       <img src="/static/assets/img/brand/white.png" alt="Argon Design - Template Starter Logo.">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-collapse" aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -10,7 +10,7 @@
       <div class="navbar-collapse-header">
         <div class="row">
           <div class="col-6 collapse-brand">
-            <a href="/backoffice">
+            <a href="{% url 'home_back' %}">
               <img src="/static/assets/img/brand/blue.png">
             </a>
           </div>
