--- a/templates/backoffice/reserva/reserva_list.html
+++ b/templates/backoffice/reserva/reserva_list.html
@@ -1,6 +1,6 @@
 {% extends 'backoffice/layouts/base.html' %}
 
-{% block title %} Reservas {% endblock title %}
+{% block title %} Reserves {% endblock title %}
 
 <!-- Specific CSS goes HERE -->
 {% block stylesheets %}{% endblock stylesheets %}
@@ -17,7 +17,6 @@
                         <nav aria-label="breadcrumb" class="d-none d-md-inline-block ml-md-4">
                             <ol class="breadcrumb breadcrumb-links breadcrumb-dark">
                                 <li class="breadcrumb-item"><a href="#"><i class="fas fa-home"></i></a></li>
-                                <li class="breadcrumb-item" aria-current="page"><a href="#">Home</a></li>
                                 <li class="breadcrumb-item active" aria-current="page"><a href="#">Reservas</a></li>
                             </ol>
                         </nav>
