--- a/templates/backoffice/includes/sidenav.html
+++ b/templates/backoffice/includes/sidenav.html
@@ -2,7 +2,7 @@
   <div class="scrollbar-inner">
     <!-- Brand -->
     <div class="sidenav-header  align-items-center">
-      <a class="navbar-brand" href="/backoffice">
+      <a class="navbar-brand" href="{% url 'home_back' %}">
         <!--<img src="/static/assets/img/brand/blue.png" class="navbar-brand-img" alt="Argon Design - Jinja Template Logo.">-->
           <h1>Music Engine S.L.</h1>
       </a>
@@ -13,15 +13,21 @@
         <!-- Nav items -->
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link {% if 'index' in segment %} active {% endif %}" href="/backoffice">
+            <a class="nav-link {% if 'home_back' in segment %} active {% endif %}" href="{% url 'home_back' %}">
               <i class="ni ni-tv-2 text-primary"></i>
               <span class="nav-link-text">Home</span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link {% if 'reservas' in segment %} active {% endif %}" href="/backoffice/reservas">
+            <a class="nav-link {% if 'reservas_list' in segment %} active {% endif %}" href="{% url 'reservas_list' %}">
               <i class="ni ni-notification-70 text-primary"></i>
               <span class="nav-link-text">Reservas</span>
+            </a>
+          </li>
+            <li class="nav-item">
+            <a class="nav-link {% if 'horas_tecnicos_list' in segment %} active {% endif %}" href="{% url 'horas_tecnicos_list' %}">
+              <i class="ni ni-watch-time text-primary"></i>
+              <span class="nav-link-text">Hores Tècnics</span>
             </a>
           </li>
         </ul>
@@ -34,7 +40,7 @@
         <!-- Navigation -->
         <ul class="navbar-nav mb-md-3">
           <li class="nav-item">
-            <a class="nav-link {% if 'tecnics' in segment %} active {% endif %}" href="/backoffice/tecnicos">
+            <a class="nav-link {% if 'tecnicos_list' == segment %} active {% endif %}" href="{% url 'tecnicos_list' %}">
               <i class="ni ni-atom text-primary"></i>
               <span class="nav-link-text">Tècnics</span>
             </a>
