--- a/templates/backoffice/page-403.html
+++ b/templates/backoffice/page-403.html
@@ -26,7 +26,7 @@
           </div>
           <div class="row mt-3">
             <div class="col-6">
-              <a href="/backoffice" class="text-light"><small>Home</small></a>
+              <a href="{% url 'home_back' %}" class="text-light"><small>Home</small></a>
             </div>          
             <div class="col-6 text-right">
               <a target="_blank" 
