--- a/templates/backoffice/page-404.html
+++ b/templates/backoffice/page-404.html
@@ -19,14 +19,14 @@
               </div>
 
               <div class="text-center mb-4">
-                Page not found - <a href="/backoffice">Home</a>
+                Page not found - <a href="{% url 'home_back' %}">Home</a>
               </div>
 
             </div>
           </div>
           <div class="row mt-3">
             <div class="col-6">
-              <a href="/backoffice" class="text-light"><small>Home</small></a>
+              <a href="{% url 'home_back' %}" class="text-light"><small>Home</small></a>
             </div>
             <div class="col-6 text-right">
               <a target="_blank" 
