--- a/templates/authentication/includes/footer.html
+++ b/templates/authentication/includes/footer.html
@@ -10,7 +10,7 @@
           </div>-->
           <div class="col-xl-6">
             <div class="text-center text-xl-right text-muted">
-                 Developed by <a target="" href="#">Udl</a>
+                 Developed by <a target="" href="#">UdL</a>
             </div>
           </div>
         </div>
