--- a/templates/backoffice/horas_tecnicos_especialistas.html
+++ b/templates/backoffice/horas_tecnicos_especialistas.html
@@ -40,6 +40,8 @@
                         <tr>
                             <th scope="col" class="sort" data-sort="budget">Nom Tècnic</th>
                             <th scope="col" class="sort" data-sort="status">Data</th>
+                            <th scope="col" class="sort" data-sort="status">Hora Inici</th>
+                            <th scope="col" class="sort" data-sort="status">Hora Final</th>
                             <th scope="col" class="sort" data-sort="completion">Hores</th>
                             <th scope="col"></th>
                         </tr>
@@ -52,6 +54,12 @@
                                 </td>
                                 <td>
                                     {{ t.fecha }}
+                                </td>
+                                <td>
+                                    {{ t.hora_inicio }}
+                                </td>
+                                <td>
+                                    {{ t.hora_fin }}
                                 </td>
                                 <td>
                                     {{ t.horas }}
@@ -141,49 +149,50 @@
                 </div>
                 <div class="card">
                     <div class="card-header">
-                    <h3 class="mb-4">Consulta Tècnics i Especialistes Disponibles</h3>
-                    <form>
-                        <div class="row">
-                            <div class="col-xl-4">
-                                <div class="form-group">
-                                    <div class="input-group date" id="datetimepicker1">
-                                        <input type="date" class="form-control" control-id="ControlID-23">
+                        <h3 class="mb-4">Consulta Tècnics i Especialistes Disponibles</h3>
+                        <form method="post" action="{% url 'tecnicos_search' %}">
+                            {% csrf_token %}
+                            <div class="row">
+                                <div class="col-xl-4">
+                                    <div class="form-group">
+                                        <div class="input-group date" id="datetimepicker1">
+                                            <input name="fecha" type="date" class="form-control">
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="col-xl-4">
-                                <div class="form-group">
-                                    <div class="input-group time">
-                                        <input type="time" class="form-control" control-id="ControlID-23">
+                                <div class="col-xl-4">
+                                    <div class="form-group">
+                                        <div class="input-group time">
+                                            <input name="hora" type="time" class="form-control">
+                                        </div>
                                     </div>
                                 </div>
+                                <div class="col-xl-4">
+                                    <button type="submit" class="btn btn-primary mt-0">Consultar</button>
+                                </div>
                             </div>
-                            <div class="col-xl-4">
-                                <button type="submit" class="btn btn-primary mt-0">Consultar</button>
-                            </div>
-                        </div>
-                    </form>
+                        </form>
 
-                </div>
+                    </div>
                     <div class="card-body">
                         <div class="table-responsive">
-                    <table class="table align-items-center table-flush">
-                        <thead class="thead-light">
-                        <tr>
-                            <th scope="col" class="sort" data-sort="budget">Nom Tècnic</th>
-                        </tr>
-                        </thead>
-                        <tbody class="list">
-                        {% for t in horas_tecnicos %}
-                            <tr>
-                                <td class="budget">
-                                    {{ t.tecnico.nombre }}
-                                </td>
-                            </tr>
-                        {% endfor %}
-                        </tbody>
-                    </table>
-                </div>
+                            <table class="table align-items-center table-flush">
+                                <thead class="thead-light">
+                                <tr>
+                                    <th scope="col" class="sort" data-sort="budget">Nom Tècnic</th>
+                                </tr>
+                                </thead>
+                                <tbody class="list">
+                                {% for t in consulta_tecnicos %}
+                                    <tr>
+                                        <td class="budget">
+                                            {{ t.tecnico__nombre }}
+                                        </td>
+                                    </tr>
+                                {% endfor %}
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
                 </div>
 
