--- a/templates/backoffice/includes/sidenav.html
+++ b/templates/backoffice/includes/sidenav.html
@@ -1,69 +1,73 @@
 <nav class="sidenav navbar navbar-vertical  fixed-left  navbar-expand-xs navbar-light bg-white" id="sidenav-main">
-  <div class="scrollbar-inner">
-    <!-- Brand -->
-    <div class="sidenav-header  align-items-center">
-      <a class="navbar-brand" href="{% url 'home_back' %}">
-        <!--<img src="/static/assets/img/brand/blue.png" class="navbar-brand-img" alt="Argon Design - Jinja Template Logo.">-->
-          <h1>Music Engine S.L.</h1>
-      </a>
+    <div class="scrollbar-inner">
+        <!-- Brand -->
+        <div class="sidenav-header  align-items-center">
+            <a class="navbar-brand" href="{% url 'home_back' %}">
+                <!--<img src="/static/assets/img/brand/blue.png" class="navbar-brand-img" alt="Argon Design - Jinja Template Logo.">-->
+                <h1>Music Engine S.L.</h1>
+            </a>
+        </div>
+        <div class="navbar-inner">
+            <!-- Collapse -->
+            <div class="collapse navbar-collapse" id="sidenav-collapse-main">
+                <!-- Nav items -->
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link {% if 'home_back' in segment %} active {% endif %}"
+                           href="{% url 'home_back' %}">
+                            <i class="ni ni-tv-2 text-primary"></i>
+                            <span class="nav-link-text">Home</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if 'reservas_list' in segment %} active {% endif %}"
+                           href="{% url 'reservas_list' %}">
+                            <i class="ni ni-notification-70 text-primary"></i>
+                            <span class="nav-link-text">Reservas</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if 'horas_tecnicos_list' in segment %} active {% endif %}"
+                           href="{% url 'horas_tecnicos_list' %}">
+                            <i class="ni ni-watch-time text-primary"></i>
+                            <span class="nav-link-text">Hores Tècnics</span>
+                        </a>
+                    </li>
+                </ul>
+                <!-- Divider -->
+                <hr class="my-3">
+                <!-- Heading -->
+                <h6 class="navbar-heading p-0 text-muted">
+                    <span class="docs-normal">Objectes</span>
+                </h6>
+                <!-- Navigation -->
+                <ul class="navbar-nav mb-md-3">
+                    <li class="nav-item">
+                        <a class="nav-link {% if 'tecnicos_list' == segment %} active {% endif %}"
+                           href="{% url 'tecnicos_list' %}">
+                            <i class="ni ni-atom text-primary"></i>
+                            <span class="nav-link-text">Tècnics</span>
+                        </a>
+                    </li>
+                </ul>
+                <!-- Divider -->
+                <hr class="my-3">
+                <!-- Heading -->
+                <h6 class="navbar-heading p-0 text-muted">
+                    <span class="docs-normal">Test</span>
+                </h6>
+                <!-- Navigation -->
+                <ul class="navbar-nav mb-md-3">
+                    <li class="nav-item">
+                        <a class="nav-link"
+                           target="_blank"
+                           href="https://appseed.us/admin-dashboards/django-dashboard-argon">
+                            <i class="ni ni-archive-2"></i>
+                            <span class="nav-link-text">Test</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
-    <div class="navbar-inner">
-      <!-- Collapse -->
-      <div class="collapse navbar-collapse" id="sidenav-collapse-main">
-        <!-- Nav items -->
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link {% if 'home_back' in segment %} active {% endif %}" href="{% url 'home_back' %}">
-              <i class="ni ni-tv-2 text-primary"></i>
-              <span class="nav-link-text">Home</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link {% if 'reservas_list' in segment %} active {% endif %}" href="{% url 'reservas_list' %}">
-              <i class="ni ni-notification-70 text-primary"></i>
-              <span class="nav-link-text">Reservas</span>
-            </a>
-          </li>
-            <li class="nav-item">
-            <a class="nav-link {% if 'horas_tecnicos_list' in segment %} active {% endif %}" href="{% url 'horas_tecnicos_list' %}">
-              <i class="ni ni-watch-time text-primary"></i>
-              <span class="nav-link-text">Hores Tècnics</span>
-            </a>
-          </li>
-        </ul>
-        <!-- Divider -->
-        <hr class="my-3">
-        <!-- Heading -->
-        <h6 class="navbar-heading p-0 text-muted">
-          <span class="docs-normal">Objectes</span>
-        </h6>
-        <!-- Navigation -->
-        <ul class="navbar-nav mb-md-3">
-          <li class="nav-item">
-            <a class="nav-link {% if 'tecnicos_list' == segment %} active {% endif %}" href="{% url 'tecnicos_list' %}">
-              <i class="ni ni-atom text-primary"></i>
-              <span class="nav-link-text">Tècnics</span>
-            </a>
-          </li>
-        </ul>
-        <!-- Divider -->
-        <hr class="my-3">
-        <!-- Heading -->
-        <h6 class="navbar-heading p-0 text-muted">
-          <span class="docs-normal">Test</span>
-        </h6>
-        <!-- Navigation -->
-        <ul class="navbar-nav mb-md-3">
-          <li class="nav-item">
-            <a class="nav-link"
-               target="_blank"
-               href="https://appseed.us/admin-dashboards/django-dashboard-argon">
-              <i class="ni ni-archive-2"></i>
-              <span class="nav-link-text">Test</span>
-            </a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </div>
 </nav>
