--- a/templates/backoffice/tecnicos_especialistas.html
+++ b/templates/backoffice/tecnicos_especialistas.html
@@ -74,7 +74,8 @@
                                             <i class="fas fa-ellipsis-v"></i>
                                         </a>
                                         <div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">
-                                            <a class="dropdown-item" href="{% url 'tecnicos_delete' %}{{ t.id }}">Borrar</a>
+                                            <a class="dropdown-item"
+                                               href="{% url 'tecnicos_delete' %}{{ t.id }}">Borrar</a>
                                         </div>
                                     </div>
                                 </td>
