--- a/templates/backoffice/includes/sidenav.html
+++ b/templates/backoffice/includes/sidenav.html
@@ -49,6 +49,13 @@
                             <span class="nav-link-text">Tècnics</span>
                         </a>
                     </li>
+                <li class="nav-item">
+                            <a class="nav-link {% if 'material_list' in segment %} active {% endif %}"
+                               href="{% url 'material_list' %}">
+                                <i class="ni ni-atom text-primary"></i>
+                                <span class="nav-link-text">Material</span>
+                            </a>
+                    </li>
                 </ul>
                 <!-- Divider -->
                 <hr class="my-3">
