--- a/templates/backoffice/material.html
+++ b/templates/backoffice/material.html
@@ -69,8 +69,8 @@
                                             <i class="fas fa-ellipsis-v"></i>
                                         </a>
                                         <div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">
-                                            <!--<a class="dropdown-item"
-                                               href="{% url 'tecnicos_delete' %}{{ t.id }}">Borrar</a>-->
+                                            <a class="dropdown-item"
+                                               href="{% url 'material_delete' %}{{ t.id }}">Borrar</a>
                                         </div>
                                     </div>
                                 </td>
@@ -85,7 +85,7 @@
                     <div class="card-header">
                         <div class="row align-items-center">
                             <div class="col-8">
-                                <h3 class="mb-0">Nou Tècnic o Especialista</h3>
+                                <h3 class="mb-0">Nou Material</h3>
                             </div>
                             <!--<div class="col-4 text-right">
                                 <a href="#!" class="btn btn-sm btn-primary">Settings</a>
@@ -93,23 +93,16 @@
                         </div>
                     </div>
                     <div class="card-body">
-                        <form method="post" action="{% url 'tecnicos_create' %}">
+                        <form method="post" action="{% url 'material_create' %}">
                             {% csrf_token %}
                             <!--<h6 class="heading-small text-muted mb-4">User information</h6>-->
                             <div class="pl-lg-4">
                                 <div class="row">
-                                    <div class="col-lg-6">
+                                    <div class="col-lg-12">
                                         <div class="form-group">
                                             <label class="form-control-label" for="input-nom">Nom</label>
                                             <input type="text" id="input-nom" name="nombre" class="form-control"
                                                    placeholder="Nom" value="">
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-6">
-                                        <div class="form-group">
-                                            <label class="form-control-label" for="input-telefon">Telèfon</label>
-                                            <input type="number" id="input-telefon" name="telefono" class="form-control"
-                                                   placeholder="">
                                         </div>
                                     </div>
                                 </div>
