--- a/templates/backoffice/reserva/reserva_view.html
+++ b/templates/backoffice/reserva/reserva_view.html
@@ -13,11 +13,13 @@
             <div class="header-body">
                 <div class="row align-items-center py-4">
                     <div class="col-lg-6 col-7">
-                        <h6 class="h2 text-white d-inline-block mb-0">Reserves</h6>
+                        <h6 class="h2 text-white d-inline-block mb-0">Nova Reserva</h6>
                         <nav aria-label="breadcrumb" class="d-none d-md-inline-block ml-md-4">
                             <ol class="breadcrumb breadcrumb-links breadcrumb-dark">
                                 <li class="breadcrumb-item"><a href="#"><i class="fas fa-home"></i></a></li>
-                                <li class="breadcrumb-item active" aria-current="page"><a href="#">Reserves</a></li>
+                                <li class="breadcrumb-item"><a href="#">Reserves</a></li>
+                                <li class="breadcrumb-item active" aria-current="page"><a href="#">Nova</a></li>
+
                             </ol>
                         </nav>
                     </div>
@@ -88,7 +90,6 @@
     </div>
 
     {% include "backoffice/includes/footer.html" %}
-
 
 {% endblock content %}
 
