--- a/templates/backoffice/reserva/reserva_list.html
+++ b/templates/backoffice/reserva/reserva_list.html
@@ -73,8 +73,8 @@
                                             <i class="fas fa-ellipsis-v"></i>
                                         </a>
                                         <div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">
-                                            <a class="dropdown-item" href="{% url 'reserva_view' %}{{ reserva.id }}">Veure</a>
-                                            <a class="dropdown-item" href="{% url 'reserva_delete' %}{{ reserva.id }}">Borrar</a>
+                                            <a class="dropdown-item" href="{% url 'reservas_view' %}{{ reserva.id }}">Veure</a>
+                                            <a class="dropdown-item" href="{% url 'reservas_delete' %}{{ reserva.id }}">Borrar</a>
                                         </div>
                                     </div>
                                 </td>
